fixed layout bugs

--- a/src/styling/hjemmeside.css
+++ b/src/styling/hjemmeside.css
@@ -1,157 +1,138 @@
 .hjemmeside-container {
-    height: 100%;
+  height: 100%;
 }
 
 .image-container {
-    height: 60%;
-    position: relative;
-    top: 10%;
-    
-    
+  height: 100%;
+  position: relative;
 }
-
 
 .image-style {
-    background-size: contain;
-    background-repeat: no-repeat, repeat;
-    left:60%;
-    
+  background-size: contain;
+  background-repeat: no-repeat, repeat;
+  background-position: right;
 }
 
-
-.image1{
-    height:200px;
-    position:relative;
-    background-size: contain;
-    background-repeat: no-repeat, repeat;
-    
+.image1 {
+  height: 200px;
+  position: relative;
+  background-size: contain;
+  background-repeat: no-repeat, repeat;
 }
 
-.image2{
-    height:200px;
-    position:relative;
-    background-size: contain;
-    background-repeat: no-repeat, repeat;
-    
+.image2 {
+  height: 200px;
+  position: relative;
+  background-size: contain;
+  background-repeat: no-repeat, repeat;
 }
 
-.image3{
-    height:200px;
-    position:relative;
-    background-size: contain;
-    background-repeat: no-repeat, repeat;
-    
+.image3 {
+  height: 200px;
+  position: relative;
+  background-size: contain;
+  background-repeat: no-repeat, repeat;
 }
 
-.tittel{
-    color: #1d3c34;
-    position: absolute;
-    top: 45%;
-    transform: translate(-50%);
-    left : -35%;
-    font-size: 5vh;
-    text-align:left;
-    font-weight: 500;
-  
+.tittel {
+  color: #1d3c34;
+  position: absolute;
+  top: 40%;
+  font-size: 5vh;
+  text-align: center;
+  font-weight: 500;
+  left: 3%
 }
 
-
-.undertittel{
-    color: #1d3c34;
-    position: absolute;
-    top: 63%;
-    transform: translate(-50%);
-    left: -32%;
-    font-size: 2vh;
-    text-align: left;
-    font-weight: 450;
+.undertittel {
+  color: #1d3c34;
+  position: absolute;
+  top: 50%;
+  font-size: 2vh;
+  font-weight: 450;
+  left: 4%
 }
 
 .col-sm {
-    color: #1d3c34;
-    font-size: 1.7vh;
-    font-weight: 400;
-    padding: 70px;
-    text-align:left;
-
+  color: #1d3c34;
+  font-size: 1.7vh;
+  font-weight: 400;
+  padding: 70px;
 }
 
-.footer{
+.footer {
   background-color: #1d3c34;
   height: 20vh;
   width: 100%;
 }
 
 .footer-text-large {
-    font-size: 3.2vh;
-    color: #b7dc8f;
+  font-size: 3.2vh;
+  color: #b7dc8f;
 }
 
 .footer-text-small {
-    font-size: 2.2vh;
-    color: #b7dc8f;
+  font-size: 2.2vh;
+  color: #b7dc8f;
 }
 
 .footer-text-smaller {
-    font-size: 1.8vh;
-    color: #F0F4E3;
+  font-size: 1.8vh;
+  color: #f0f4e3;
 }
 
-
-
 @media (max-width: 800px) {
-    .col-sm {
-        padding: 50px !important;
-    }
+  .col-sm {
+    padding: 50px !important;
+  }
 }
 
 @media (max-width: 414px) {
-    .col-sm {
-        padding: 67px !important;
-    }
+  .col-sm {
+    padding: 67px !important;
+  }
 }
 
 @media (max-width: 375px) {
-    .footer {
-        height: 150px;
-    }
+  .footer {
+    height: 150px;
+  }
 }
 
 @media (max-width: 414px) {
+  .undertittel {
+    font-size: medium;
+    top: 90% !important;
+    transform: translate(-50%);
+    left: 50%;
+  }
 
-    .undertittel {
-       
-        font-size: medium;
-        top: 96% !important;
-        transform: translate(-50%);
-        left: 50%;
-    }
+  .image-style {
+    left: 0;
+    background-position: left;
+  }
+
+  .tittel {
+    padding: 95px;
+    position: absolute;
+    transform: translate(-50%);
+    top: 30%;
+    left: 50%;
+  }
+
+  .image-style {
+    background-size: contain;
+    background-repeat: no-repeat, repeat;
+  }
 }
 
-@media (max-width: 414px) {
-
-    .tittel {
-       
-        padding: 95px;
-        right: -40px;
-        position: absolute;
-        top: 30%;
-        left: 50%;
-    }
-}
-
-@media (max-width: 414px) {
+/* @media (max-width: 414px) {
 
     .image-container {
         height: 80%;
         position: relative;
     }
-}
+} */
 
 @media (max-width: 414px) {
-
-    .image-style {
-        background-size: contain;
-        background-repeat: no-repeat, repeat;
-    }
 }
